0028127: Visualization - transparent object breaks Z-Layer depth buffer clear

OpenGl_LayerList::Render() now calls glDepthMask(GL_TRUE) before clearing depth buffer.
Depth buffer is now cleared even if ZLayer with this command has no structures.